Inject URL base for javascript to use

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -132,6 +132,7 @@
     </div>
 </footer>
 
+<script src="config.js.jsp"></script>
 
 <script src="lib/angular/angular.min.js"></script>
 <script src="lib/angular/angular-resource.min.js"></script>
