bug fixes and UI tweaks

--- a/web/src/main/webapp/design.html
+++ b/web/src/main/webapp/design.html
@@ -312,7 +312,7 @@
           <div class="row-fluid page-title">
             <div class="span12">
               <h1 class="content-title">Index -</h1>
-              <ul class="breadcrumb">
+              <ul class="crumbs">
                 <li><a href="#">Home</a><span class="divider">/</span></li>
                 <li><a href="#">Page</a><span class="divider">/</span></li>
                 <li><a href="#">Page</a><span class="divider">/</span></li>
