--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -49,9 +49,54 @@
                 <li>
                     <div class="title"><i class="icon-signal"></i>WiFi</div>
                 </li>
+                <li ng-show="sites" class="dropdown">
+                    <a href="#" data-toggle="dropdown" class="dropdown-toggle">
+                        <span ng-bind="selectedSite.friendly_name"></span><i class="icon-caret-down"></i>
+                    </a>
+
+                    <div class="site-list dropdown-menu">
+                        <div class="no-select" style="background-color: #f7f7f7;padding-top: 10px;">
+                            <input ng-model="siteFilter" ng-click="cancel($event)" ng-focus="cancel($event)" ng-change="filter()" type="text" placeholder="Search by name" class="search input-xs ng-pristine ng-valid" style="width: 275px; border: 1px solid lightgrey; margin-left: 5px;">
+                            <div style="border-top: 1px solid lightgrey; border-bottom: 1px solid lightgrey; padding-left: 5px;">
+                                Sort By:
+                                <a ng-click="toggleSortDirection($event, 'friendly_name')" style="margin-left: 5px;">
+                                    Name
+                                    <i class="{{sortIcons.friendly_name}}"></i>
+                                </a>
+                                <a ng-click="toggleSortDirection($event, 'city')" style="margin-left: 5px;">
+                                    City
+                                    <i class="{{sortIcons.city}}"></i>
+                                </a>
+                                <a ng-click="toggleSortDirection($event, 'state')" style="margin-left: 5px;">
+                                    State
+                                    <i class="{{sortIcons.state}}"></i>
+                                </a>
+                                <a ng-click="toggleSortDirection($event, 'zip')" style="margin-left: 5px;">
+                                    Zip
+                                    <i class="{{sortIcons.zip}}"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <ul role="menu">
+                            <li class="pbx-account" ng-repeat="site in filteredSites"><a ng-click="selectSite(site)">
+                                <div class="media-body">
+                                    <h4 class="media-heading">{{site.friendly_name}}</h4><small>{{site.city}}, {{site.state}} {{site.zip}}</small>
+                                </div></a>
+                            </li>
+                        </ul>
+
+                        <div style="background-color: #f7f7f7;padding-bottom: 5px;">
+                            <a href="#/site" class="btn btn-primary" style="margin-right: 5px; margin-left: 200px;">
+                                <i class="icon-plus"></i>
+                                Add Site</a>
+                        </div>
+                    </div>
+
+                </li>
                 <li class="dropdown" ng-class="isActive('Devices')" ng-show="sites"><a ng-click="navigate('devices')" data-toggle="dropdown">Access Point Devices</a></li>
                 <li class="dropdown" ng-class="isActive('Networks')" ng-show="sites"><a ng-click="navigate('networks')" data-toggle="dropdown">Wireless Networks</a></li>
-                <li class="dropdown" ng-class="isActive('Users')" ng-show="sites"><a ng-click="navigate('users')" data-toggle="dropdown">Device Users</a></li>
+                <li class="dropdown" ng-class="isActive('Users')" ng-show="sites"><a ng-click="navigate('users')" data-toggle="dropdown">Connected Devices</a></li>
                 <li class="dropdown" ng-class="isActive('Settings')" ng-show="sites"><a ng-click="navigate('settings')" data-toggle="dropdown">Site Settings</a></li>
                 <li class="dropdown" ng-class="isActive('Sites')" ng-show="isAdmin"><a ng-click="navigate('sites')" data-toggle="dropdown">Sites</a></li>
             </ul>
@@ -84,30 +129,6 @@
             </div>
         </div>
     </nav>
-    <div class="page-banner">
-        <div class="container-fluid">
-            <div class="row-fluid">
-                <div class="span12">
-                    <ul class="status">
-                        <li ng-show="sites">
-                            <div class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">
-                                <div class="title"><span ng-bind="selectedSite.friendly_name"></span><i class="icon-caret-down"></i></div></a>
-
-                                <ul role="menu" aria-labelledby="dropdownMenu" class="dropdown-menu pbx-menu">
-                                    <li class="pbx-account" ng-repeat="site in sites"><a ng-click="selectSite(site)">
-                                        <div class="media-body">
-                                            <h4 class="media-heading">{{site.friendly_name}}</h4><small>{{site.city}}, {{site.state}} {{site.zip}}</small>
-                                        </div></a></li>
-                                    <li class="divider"></li>
-                                </ul>
-
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
 </header>
 
 <div class="workspace">
@@ -146,6 +167,7 @@
 <script src="lib/moment.min.js"></script>
 <script src="lib/jive.js"></script>
 <script src="lib/pubsub.js"></script>
+<script src="lib/lodash.js"></script>
 
 <script src="js/app.js"></script>
 <script src="js/appLib.js"></script>
