show password checkboxes

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -26,26 +26,11 @@
     </div>
 </div>
 
-
-<div id="sidr" class="loading-hide">
-    <div class="portal-name"></div>
-    <ul>
-        <li><a href="https://jive.onjive.com/admin/users/"><i class="icon-user"></i>User</a></li>
-        <li><a href="https://jive.onjive.com/admin/usergroups/"><i class="icon-group"></i>User Groups</a></li>
-        <li><a href="https://jive.onjive.com/admin/phonenumbers/"><i style="font-style: normal; margin-left: 5px; margin-right: 10px; font-weight: bold;">#</i>Phone Numbers</a></li>
-        <li><a href="https://jive.onjive.com/admin/devices/"><i class="icon-phone"></i>Phone Devices</a></li>
-        <li><a href="https://jive.onjive.com/admin/extensions/"><i class="icon-sitemap"></i>Phone Extensions</a></li>
-        <li><a href="https://jive.onjive.com/admin/holdmusic/"><i class="icon-music"></i>Hold Music</a></li>
-        <li><a href="https://jive.onjive.com/admin/directories/"><i class="icon-book"></i>Directories</a></li>
-        <li><a href="https://jive.onjive.com/admin/schedules/"><i class="icon-time"></i>Schedules</a></li>
-        <li><a href="#/" class="active"><i class="icon-signal"></i>WiFi</a></li>
-    </ul>
-</div>
 <header ng-controller="MainMenuController">
     <nav class="navbar">
         <div class="navbar-inner">
             <ul class="nav">
-                <li><a href="#sidr" class="side-menu"><i class="icon-reorder"></i></a></li>
+                <li><a style="padding: 8px; font-size:23px;" ng-click="returnHome()"><i class="icon-home"></i></a></li>
                 <li>
                     <div class="title"><i class="icon-signal"></i>WiFi</div>
                 </li>
