--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -86,7 +86,7 @@
                 Add Site</a>
         </div>
         <div class="no-select">
-            <input ng-model="siteFilter" ng-click="cancel($event)" ng-focus="cancel($event)" ng-change="filter()" type="text" placeholder="Search by name" class="search input-xs ng-pristine ng-valid" style="min-width: 90%; border: 1px solid lightgrey; margin-left: 5px;">
+            <input ng-model="siteFilter" ng-click="cancel($event)" ng-focus="cancel($event)" ng-change="filter()" type="text" placeholder="Search by name" class="search input-xs ng-pristine ng-valid" style="width: 90%; border: 1px solid lightgrey; margin: 0 5px 5px 5px;">
             <div style="border-top: 1px solid lightgrey; border-bottom: 1px solid lightgrey; padding-left: 5px;">
                 Sort By:
                 <a ng-click="toggleSortDirection($event, 'friendly_name')" style="margin-left: 5px;">
