large restructured of paths etc.

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -34,11 +34,12 @@
                 <li>
                     <div class="title"><i class="icon-signal"></i>WiFi</div>
                 </li>
-                <li class="brand" ng-bind="selectedSite.friendly_name" style="width:100px; text-align:center" ng-show="siteChosen ? sites : ''"></li>
-                <li class="dropdown" ng-class="isActive('Networks')" ng-show="siteChosen ? sites : ''"><a ng-click="navigate('networks')" data-toggle="dropdown">Wireless Networks</a></li>
-                <li class="dropdown" ng-class="isActive('Devices')" ng-show="siteChosen ? sites : ''"><a  ng-disabled="true" ng-click="navigate('devices')" data-toggle="dropdown">Access Points</a></li>
-                <li class="dropdown" ng-class="isActive('Users')" ng-show="siteChosen ? sites : ''"><a ng-click="navigate('users')" data-toggle="dropdown">Connected User Devices</a></li>
-                <li class="dropdown" ng-class="isActive('Settings')" ng-show="siteChosen ? sites : ''"><a ng-click="navigate('settings')" data-toggle="dropdown">Site Settings</a></li>
+                <li class="brand" ng-bind="selectedSite.friendly_name" style="width:100px; text-align:center" ng-show="siteChosen"></li>
+                <li class="dropdown" ng-class="isActive('Networks')" ng-show="sites"><a ng-click="navigate('networks')" data-toggle="dropdown">Wireless Networks</a></li>
+                <li class="dropdown" ng-class="isActive('Macs')" ng-show="sites"><a ng-click="navigate('macs')" data-toggle="dropdown">MACS</a></li>
+                <li class="dropdown" ng-class="isActive('Devices')" ng-show="sites"><a  ng-click="navigate('devices')" data-toggle="dropdown">Access Points</a></li>
+                <li class="dropdown" ng-class="isActive('Users')" ng-show="sites"><a ng-click="navigate('users')" data-toggle="dropdown">Connected User Devices</a></li>
+                <li class="dropdown" ng-class="isActive('Settings')" ng-show="sites"><a ng-click="navigate('settings')" data-toggle="dropdown">Site Settings</a></li>
             </ul>
             <div class="meta-menu">
                 <ul class="nav pull-right" ng-show="email">
@@ -81,7 +82,7 @@
     </div>
     <div class="main-sidebar" ng-controller="MainMenuController">
         <div style="position: relative; width: 100%;">
-            <h2 style="margin-left: 10px; float: left;">Sites</h2>
+            <h2 style="margin-left: 10px; float: left;">Locations</h2>
             <a href="#/newsite" class="btn btn-primary" style="margin: 14px 20px; float: right;">
                 <i class="icon-plus"></i>
                 Add Site</a>
