--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -114,7 +114,7 @@
                 <ul class="nav nav-pills nav-stacked">
                     <li class="page-actions" >
                             <a class="delete-site" ng-click="deleteSite(site,sites)"><i class="icon-trash" ></i></a>
-                            <a ng-click="selectSite(site)" ng-href="/index.html#/site/{{site.site_id}}/networks">
+                            <a ng-click="selectSite(site)" ng-href="/index.html#/networks">
                                 <h4 class="media-heading">{{site.friendly_name}}</h4>
                                 <small>{{site.city}}, {{site.state}} {{site.zip}}</small>
                             </a>
