Site selects and other gui fixes and such

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -34,9 +34,8 @@
                 <li>
                     <div class="title"><i class="icon-signal"></i>WiFi</div>
                 </li>
-                <li class="brand" ng-bind="selectedSite.friendly_name" style="width:100px; text-align:center" ng-show="siteChosen"></li>
+                <li class="brand" ng-bind="selectedSite.friendly_name" style="width:100px; text-align:center" ng-show="sites"></li>
                 <li class="dropdown" ng-class="isActive('Networks')" ng-show="sites"><a ng-click="navigate('networks')" data-toggle="dropdown">Wireless Networks</a></li>
-                <li class="dropdown" ng-class="isActive('Macs')" ng-show="sites"><a ng-click="navigate('macs')" data-toggle="dropdown">MACS</a></li>
                 <li class="dropdown" ng-class="isActive('Devices')" ng-show="sites"><a  ng-click="navigate('devices')" data-toggle="dropdown">Access Points</a></li>
                 <li class="dropdown" ng-class="isActive('Users')" ng-show="sites"><a ng-click="navigate('users')" data-toggle="dropdown">Connected User Devices</a></li>
                 <li class="dropdown" ng-class="isActive('Settings')" ng-show="sites"><a ng-click="navigate('settings')" data-toggle="dropdown">Site Settings</a></li>
@@ -82,7 +81,7 @@
     </div>
     <div class="main-sidebar" ng-controller="MainMenuController">
         <div style="position: relative; width: 100%;">
-            <h2 style="margin-left: 10px; float: left;">Locations</h2>
+            <h2 style="margin-left: 10px; float: left;">SITES</h2>
             <a href="#/newsite" class="btn btn-primary" style="margin: 14px 20px; float: right;">
                 <i class="icon-plus"></i>
                 Add Site</a>
@@ -112,7 +111,7 @@
         <div class="scrollable">
                <div class="pbx-account" ng-repeat="site in filteredSites" ng-class="siteClass('{{site}}')">
                 <ul class="nav nav-pills nav-stacked">
-                    <li class="page-actions" >
+                    <li id="site_{{site.site_id}}" class="page-actions" ng-class="selectedSite.site_id == site.site_id ? 'active' : ''" >
                             <a class="delete-site" ng-click="deleteSite(site,sites)"><i class="icon-trash" ></i></a>
                             <a ng-click="selectSite(site)" ng-href="/index.html#/networks">
                                 <h4 class="media-heading">{{site.friendly_name}}</h4>
