Added profiels support and altered settings page

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -145,7 +145,7 @@
 <script src="lib/angular/angular-resource.min.js"></script>
 <script src="lib/angular/angular-route.min.js"></script>
 <script src="lib/angular/angular-cookies.min.js"></script>
-<!-- <script src="lib/angular-ext/ui-bootstrap-tpls-0.11.0.min.js"></script> -->
+<script src="lib/angular-ext/ui-bootstrap-tpls-0.11.0.min.js"></script>
 <script src="lib/angular-ext/ui-bootstrap-tpls-0.6.0.min.js"></script>
 <script src="lib/jquery/jquery-1.10.2.min.js"></script>
 <script src="lib/select2/select2.min.js"></script>
@@ -198,6 +198,8 @@
 <script src="js/controllers/UserController.js"></script>
 <script src="js/controllers/NetworkController.js"></script>
 <script src="js/controllers/NetworksController.js"></script>
+<script src="js/controllers/ProfilesController.js"></script>
+<script src="js/controllers/ProfileController.js"></script>
 <script src="js/controllers/SiteSettingsController.js"></script>
 <script src="js/controllers/SitesController.js"></script>
 <script src="js/controllers/SiteController.js"></script>
